--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="text_small_size">14sp</dimen>
     <dimen name="text_input_size">16sp</dimen>
     <dimen name="input_size">300dp</dimen>
+    <dimen name="padding_normal">10dp</dimen>
+    <dimen name="margin_normal">10dp</dimen>
 </resources>
