--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -96,6 +96,7 @@
                             android:layout_weight="0.2"
                             android:textSize="@dimen/text_normal_size"
                             android:gravity="center"
+                            android:drawableLeft="@drawable/ic_rouge"
                             />
                     </LinearLayout>
                     <View android:layout_width="match_parent"
@@ -134,6 +135,7 @@
                             android:layout_weight="0.2"
                             android:textSize="@dimen/text_normal_size"
                             android:gravity="center"
+                            android:drawableLeft="@drawable/vert"
                             />
                     </LinearLayout>
                     <View android:layout_width="match_parent"
@@ -172,6 +174,7 @@
                             android:layout_weight="0.2"
                             android:textSize="@dimen/text_normal_size"
                             android:gravity="center"
+                            android:drawableLeft="@drawable/jaune"
                             />
                     </LinearLayout>
                     <View android:layout_width="match_parent"
