--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -9,17 +9,17 @@
         android:layout_height="200dp"
         android:orientation="vertical"
         android:id="@+id/loginBannerLayout"
-        android:background="@color/colorPrimary">
+        android:background="@color/colorPrimary_light">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#fff"
             android:layout_marginTop="50dp">
             <ImageView
                 android:id="@+id/loginLogoImg"
                 android:layout_width="100dp"
-                android:layout_height="100dp"/>
+                android:layout_height="100dp"
+                android:src="@drawable/icone_simple"/>
         </LinearLayout>
 
     </LinearLayout>
