--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -41,9 +41,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:weightSum="1">
+                        android:weightSum="1.0">
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:text="Matières"
                             android:layout_weight="0.7"
@@ -72,7 +72,8 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="@dimen/padding_normal"
                 android:paddingRight="@dimen/padding_normal"
-                android:layout_marginTop="@dimen/margin_normal">
+                android:layout_marginTop="@dimen/margin_normal"
+                android:weightSum="1.0">
                 <LinearLayout android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
@@ -80,23 +81,23 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:weightSum="1">
+                        android:weightSum="1.0">
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:text="Anglais"
-                            android:layout_weight="0.7"
+                            android:layout_weight="0.65"
                             android:textSize="@dimen/text_normal_size"
                             android:gravity="center_vertical"
                             />
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:text="12,07"
                             android:layout_weight="0.2"
                             android:textSize="@dimen/text_normal_size"
-                            android:gravity="center"
                             android:drawableLeft="@drawable/ic_rouge"
+                            android:gravity="center"
                             />
                     </LinearLayout>
                     <View android:layout_width="match_parent"
@@ -119,17 +120,17 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:weightSum="1">
+                        android:weightSum="1.0">
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:text="Mathématique"
-                            android:layout_weight="0.7"
+                            android:layout_weight="0.65"
                             android:textSize="@dimen/text_normal_size"
                             android:gravity="center_vertical"
                             />
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:text="14,77"
                             android:layout_weight="0.2"
@@ -160,15 +161,15 @@
                         android:orientation="horizontal"
                         android:weightSum="1">
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:text="Physique - chimie"
-                            android:layout_weight="0.7"
+                            android:layout_weight="0.65"
                             android:textSize="@dimen/text_normal_size"
                             android:gravity="center_vertical"
                             />
                         <TextView
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:text="18,00"
                             android:layout_weight="0.2"
@@ -183,6 +184,282 @@
                 </LinearLayout>
             </TableRow>
 
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/padding_normal"
+                android:paddingRight="@dimen/padding_normal"
+                android:layout_marginTop="@dimen/margin_normal"
+                android:weightSum="1.0">
+                <LinearLayout android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:weightSum="1.0">
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="Anglais"
+                            android:layout_weight="0.65"
+                            android:textSize="@dimen/text_normal_size"
+                            android:gravity="center_vertical"
+                            />
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="12,07"
+                            android:layout_weight="0.2"
+                            android:textSize="@dimen/text_normal_size"
+                            android:drawableLeft="@drawable/ic_rouge"
+                            android:gravity="center"
+                            />
+                    </LinearLayout>
+                    <View android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/divider"/>
+                </LinearLayout>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/padding_normal"
+                android:paddingRight="@dimen/padding_normal"
+                android:layout_marginTop="@dimen/margin_normal"
+                android:weightSum="1.0">
+                <LinearLayout android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:weightSum="1.0">
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="Anglais"
+                            android:layout_weight="0.65"
+                            android:textSize="@dimen/text_normal_size"
+                            android:gravity="center_vertical"
+                            />
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="12,07"
+                            android:layout_weight="0.2"
+                            android:textSize="@dimen/text_normal_size"
+                            android:drawableLeft="@drawable/ic_rouge"
+                            android:gravity="center"
+                            />
+                    </LinearLayout>
+                    <View android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/divider"/>
+                </LinearLayout>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/padding_normal"
+                android:paddingRight="@dimen/padding_normal"
+                android:layout_marginTop="@dimen/margin_normal"
+                android:weightSum="1.0">
+                <LinearLayout android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:weightSum="1.0">
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="Anglais"
+                            android:layout_weight="0.65"
+                            android:textSize="@dimen/text_normal_size"
+                            android:gravity="center_vertical"
+                            />
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="12,07"
+                            android:layout_weight="0.2"
+                            android:textSize="@dimen/text_normal_size"
+                            android:drawableLeft="@drawable/ic_rouge"
+                            android:gravity="center"
+                            />
+                    </LinearLayout>
+                    <View android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/divider"/>
+                </LinearLayout>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/padding_normal"
+                android:paddingRight="@dimen/padding_normal"
+                android:layout_marginTop="@dimen/margin_normal"
+                android:weightSum="1.0">
+                <LinearLayout android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:weightSum="1.0">
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="Anglais"
+                            android:layout_weight="0.65"
+                            android:textSize="@dimen/text_normal_size"
+                            android:gravity="center_vertical"
+                            />
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="12,07"
+                            android:layout_weight="0.2"
+                            android:textSize="@dimen/text_normal_size"
+                            android:drawableLeft="@drawable/ic_rouge"
+                            android:gravity="center"
+                            />
+                    </LinearLayout>
+                    <View android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/divider"/>
+                </LinearLayout>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/padding_normal"
+                android:paddingRight="@dimen/padding_normal"
+                android:layout_marginTop="@dimen/margin_normal"
+                android:weightSum="1.0">
+                <LinearLayout android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:weightSum="1.0">
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="Anglais"
+                            android:layout_weight="0.65"
+                            android:textSize="@dimen/text_normal_size"
+                            android:gravity="center_vertical"
+                            />
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="12,07"
+                            android:layout_weight="0.2"
+                            android:textSize="@dimen/text_normal_size"
+                            android:drawableLeft="@drawable/ic_rouge"
+                            android:gravity="center"
+                            />
+                    </LinearLayout>
+                    <View android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/divider"/>
+                </LinearLayout>
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/padding_normal"
+                android:paddingRight="@dimen/padding_normal"
+                android:layout_marginTop="@dimen/margin_normal"
+                android:weightSum="1.0">
+                <LinearLayout android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:weightSum="1.0">
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="Anglais"
+                            android:layout_weight="0.65"
+                            android:textSize="@dimen/text_normal_size"
+                            android:gravity="center_vertical"
+                            />
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="12,07"
+                            android:layout_weight="0.2"
+                            android:textSize="@dimen/text_normal_size"
+                            android:drawableLeft="@drawable/ic_rouge"
+                            android:gravity="center"
+                            />
+                    </LinearLayout>
+                    <View android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/divider"/>
+                </LinearLayout>
+            </TableRow>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="25dp">
+
+            <LinearLayout android:layout_width="150dp"
+                android:layout_height="65dp"
+                android:background="@color/divider2"
+                android:orientation="vertical"
+                android:gravity="center">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Moyenne Général"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="15,57"
+                    android:textColor="@color/colorPrimary_dark"/>
+            </LinearLayout>
+
+            <LinearLayout android:layout_width="150dp"
+                android:layout_height="65dp"
+                android:background="@color/divider2"
+                android:orientation="vertical"
+                android:layout_marginLeft="20dp"
+                android:gravity="center">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Rang"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="2ème"
+                    android:textColor="@color/colorPrimary_dark"/>
+            </LinearLayout>
+            </LinearLayout>
         </TableLayout>
     </ScrollView>
 </RelativeLayout>
