--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,13 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="io.cadi.souklou.LoginActivity">
-
-   <FrameLayout
+    android:layout_height="match_parent">
+   <ScrollView
        android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:id="@+id/loginFrame"/>
+       android:layout_height="match_parent">
+
+      <RelativeLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content">
+
+         <ImageView
+             android:id="@+id/loginLogoImg"
+             android:layout_width="150dp"
+             android:layout_height="150dp"
+             android:layout_centerHorizontal="true"
+             android:layout_marginTop="20dp"
+             android:scaleType="centerInside"
+             android:focusable="true"/>
+
+         <TextView
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="@string/app_presentation"
+             android:layout_below="@+id/loginLogoImg"
+             android:layout_centerHorizontal="true"
+             android:layout_marginTop="-25dp"/>
+
+         <LinearLayout
+             android:id="@+id/linearNumber"
+             android:layout_below="@+id/loginLogoImg"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:orientation="vertical"
+             android:layout_marginTop="50dp"
+             android:gravity="center_horizontal">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/phoneNumberEdt"
+                android:layout_height="wrap_content"
+                android:layout_width="@dimen/input_size"
+                android:drawableLeft="@drawable/icone4"
+                android:drawableStart="@drawable/icone4"
+                android:hint="@string/loginNumber"
+                style="@style/EditText"
+                android:layout_marginBottom="10dp"/>
+
+            <Button
+                android:id="@+id/connectSmsBtn"
+                android:text="@string/connectBtn"
+                style="@style/BtnBackgroung"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="12dp"/>
+         </LinearLayout>
+
+         <LinearLayout
+             android:id="@+id/linearConnectWith"
+             android:layout_below="@+id/linearNumber"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:orientation="horizontal"
+             android:weightSum="2.5"
+             android:gravity="center"
+             android:layout_marginTop="10dp">
+            <View
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:background="@color/divider"
+                android:layout_marginRight="5dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Se connecter avec"/>
+            <View
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:background="@color/divider"
+                android:layout_marginLeft="5dp"/>
+         </LinearLayout>
+
+         <LinearLayout
+             android:layout_below="@+id/linearConnectWith"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:orientation="vertical"
+             android:gravity="center_horizontal"
+             android:layout_marginTop="20dp">
+
+             <com.facebook.login.widget.LoginButton
+                 android:id="@+id/connectFbkBtn"
+                 android:layout_height="@dimen/btnNormal_height"
+                 android:layout_width="@dimen/btnNormal_width"
+                 android:layout_marginTop="10dp"
+                 />
+
+
+            <Button
+                android:drawablePadding="-72dp"
+                android:drawableLeft="@drawable/google_plus_48"
+                android:text="Google"
+                style="@style/BtnBackgroung"
+                android:textColor="@color/white"
+                android:background="#E7442A"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="12dp"/>
+
+         </LinearLayout>
+
+      </RelativeLayout>
+   </ScrollView>
 
 </RelativeLayout>
