--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="divider">#B6B6B6</color>
     <color name="white">#FFFFFF</color>
     <color name="divider2">#e6e3e3</color>
+    <color name="background">#cfcfcf</color>
 </resources>
