--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,9 +3,14 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="text_normal_size">18sp</dimen>
-    <dimen name="text_small_size">14sp</dimen>
+    <dimen name="text_small_size">12sp</dimen>
     <dimen name="text_input_size">16sp</dimen>
     <dimen name="input_size">300dp</dimen>
     <dimen name="padding_normal">10dp</dimen>
     <dimen name="margin_normal">10dp</dimen>
+    <dimen name="btnNormal_width">230dp</dimen>
+    <dimen name="btnNormal_height">50dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 </resources>
