--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,19 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="AppLoginTheme" parent="Theme.AccountKit">
+        <item name="com_accountkit_primary_color">@color/colorPrimary</item>
+        <item name="com_accountkit_primary_text_color">@color/white</item>
+        <item name="com_accountkit_secondary_text_color">@color/colorSecondary_text</item>
+        <item name="com_accountkit_status_bar_color">#ed9d00</item>
+        <item name="com_accountkit_input_accent_color">@color/colorAccent</item>
+        <item name="com_accountkit_input_border_color">@color/colorAccent</item>
+        <item name="com_accountkit_button_background_color">@color/colorAccentAlpha</item>
+        <item name="com_accountkit_button_disabled_background_color">@color/colorAccent</item>
+        <item name="com_accountkit_button_pressed_border_color">@color/colorAccent</item>
+        <item name="com_accountkit_button_text_color">@color/white</item>
+    </style>
+
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
@@ -20,9 +33,9 @@
     <style name="BtnBackgroung">
         <item name="android:background">@drawable/main_btn_backgroung</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:width">230dp</item>
-        <item name="android:height">50dp</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:width">@dimen/btnNormal_width</item>
+        <item name="android:height">@dimen/btnNormal_height</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
     <style name="EditText">
