--- a/app/src/main/res/layout/register_child.xml
+++ b/app/src/main/res/layout/register_child.xml
@@ -6,7 +6,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
         android:orientation="vertical"
         android:id="@+id/loginBannerLayout"
         android:background="@color/colorPrimary"
@@ -15,7 +15,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/register"
+            android:text="Ajout d'un enfant"
             android:textColor="@color/white"
             android:textSize="35sp"
             android:layout_marginLeft="10dp"
@@ -28,7 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="50dp"
         android:gravity="center_horizontal">
 
         <android.support.design.widget.TextInputEditText
@@ -36,7 +36,7 @@
             android:layout_width="@dimen/input_size"
             android:drawableLeft="@drawable/icone4"
             android:drawableStart="@drawable/icone4"
-            android:hint="@string/loginNumber"
+            android:hint="Nom"
             style="@style/EditText"
             android:layout_marginBottom="10dp"/>
 
@@ -45,7 +45,7 @@
             android:layout_width="@dimen/input_size"
             android:drawableLeft="@drawable/icone4"
             android:drawableStart="@drawable/icone4"
-            android:hint="Nom &amp; prénom"
+            android:hint="Prénom"
             style="@style/EditText"
             android:layout_marginBottom="10dp"/>
 
@@ -55,15 +55,35 @@
             android:layout_width="@dimen/input_size"
             android:drawableLeft="@drawable/icone2"
             android:drawableStart="@drawable/icone2"
-            android:hint="@string/loginPwd"
+            android:hint="Ecole"
+            style="@style/EditText"
+            android:layout_marginBottom="10dp"/>
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/registerPwdEd"
+            android:layout_height="wrap_content"
+            android:layout_width="@dimen/input_size"
+            android:drawableLeft="@drawable/icone2"
+            android:drawableStart="@drawable/icone2"
+            android:hint="Classe"
             style="@style/EditText"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:minHeight="60dp"
+            android:gravity="center_vertical"
+            android:paddingRight="@dimen/padding_normal"
+            android:paddingLeft="@dimen/padding_normal"
+            android:text="Nous verifirons ces informations afin de valider votre inscription en moin de  24h"
+            android:background="@color/background"
+            android:textSize="@dimen/text_medium_size"
+            android:textColor="@color/colorSecondary_text"/>
 
         <Button
             android:text="@string/registerBtn"
-            style="@style/BtnBackgroung"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            style="@style/BtnBackgroungBig"
+            android:layout_marginTop="25dp"
             android:layout_marginBottom="12dp"/>
 
 
@@ -72,7 +92,7 @@
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/use_email"
+        android:text="Recevoir les notifications"
         android:textColor="@color/colorSecondary_text"
         android:id="@+id/checkBox"
         android:layout_below="@+id/loginBannerLayout"
