--- a/app/src/main/res/layout/activity_preview_child.xml
+++ b/app/src/main/res/layout/activity_preview_child.xml
@@ -4,8 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/padding_normal"
-    tool:context=".activity.MainChildActivity">
+    android:padding="@dimen/padding_normal">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -43,7 +42,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_below="@+id/linearMainReportTop"
                 android:layout_marginTop="30dp">
@@ -55,10 +54,12 @@
                     android:textSize="@dimen/text_normal_size"
                     android:textColor="@color/colorPrimary_text"/>
                 <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rcwPreviewChild"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_normal"/>
+                    android:minHeight="250dp" />
                 <Button
+                    android:id="@+id/btnPrevChilSeeMore"
                     android:text="Voir plus"
                     style="@style/BtnBackgroungNormal"
                     android:layout_marginTop="25dp"
