--- a/app/src/main/res/layout/child_row.xml
+++ b/app/src/main/res/layout/child_row.xml
@@ -40,6 +40,7 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/btnChildRow"
         android:layout_width="90dp"
         android:layout_height="30dp"
         android:background="@color/colorPrimary"
