--- a/app/src/main/res/layout/report_hearder.xml
+++ b/app/src/main/res/layout/report_hearder.xml
@@ -1,23 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/margin_normal">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="30dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
         <TextView
+            android:id="@+id/txtReportHeader"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Semaine du 22/05/2016"
+            android:text="Semaine du --/--/----"
             android:layout_weight="0.65"
             android:textSize="@dimen/text_normal_size"
             android:gravity="center_vertical"
+            android:paddingLeft="@dimen/padding_normal"
             />
+
+        <ImageView
+            android:id="@+id/imgReportHeaderArrow"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="15dp"
+            android:src="@drawable/ic_keyboard_arrow_up_black_18dp"/>
     </LinearLayout>
     <View android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/divider"/>
+
+    <ViewStub
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/vsReportHeader"/>
 
 </LinearLayout>
