--- a/app/src/main/res/menu/menu_main_child.xml
+++ b/app/src/main/res/menu/menu_main_child.xml
@@ -1,10 +1,25 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="io.cadi.souklou.LoginActivity">
+    tools:context="io.cadi.souklou.activity.PreviewChildActivity">
+
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_call"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="never" />
+        app:showAsAction="always"
+        android:icon="@android:drawable/stat_sys_phone_call"
+        />
+    <item
+        android:id="@+id/action_calendar"
+        android:orderInCategory="100"
+        android:title="@string/action_settings"
+        app:showAsAction="always"
+        android:icon="@android:drawable/ic_menu_agenda"/>
+    <item
+        android:id="@+id/action_report"
+        android:orderInCategory="100"
+        android:title="@string/action_settings"
+        app:showAsAction="always"
+        android:icon="@android:drawable/ic_menu_my_calendar"/>
 </menu>
