--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,11 +30,19 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <style name="BtnBackgroung">
+    <style name="BtnBackgroungBig">
         <item name="android:background">@drawable/main_btn_backgroung</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:width">@dimen/btnNormal_width</item>
-        <item name="android:height">@dimen/btnNormal_height</item>
+        <item name="android:layout_width">@dimen/btnBig_width</item>
+        <item name="android:layout_height">@dimen/btnBig_height</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="BtnBackgroungNormal">
+        <item name="android:background">@drawable/main_btn_backgroung</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:layout_width">@dimen/btnNormal_width</item>
+        <item name="android:layout_height">@dimen/btnNormal_height</item>
         <item name="android:textSize">16sp</item>
     </style>
 
