--- a/app/src/main/res/layout/register_child.xml
+++ b/app/src/main/res/layout/register_child.xml
@@ -32,6 +32,7 @@
         android:gravity="center_horizontal">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/firstName"
             android:layout_height="wrap_content"
             android:layout_width="@dimen/input_size"
             android:drawableLeft="@drawable/icone4"
@@ -41,6 +42,7 @@
             android:layout_marginBottom="10dp"/>
 
       <android.support.design.widget.TextInputEditText
+          android:id="@+id/lastName"
             android:layout_height="wrap_content"
             android:layout_width="@dimen/input_size"
             android:drawableLeft="@drawable/icone4"
@@ -49,8 +51,8 @@
             style="@style/EditText"
             android:layout_marginBottom="10dp"/>
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/registerPwdEdt"
+        <AutoCompleteTextView
+            android:id="@+id/school"
             android:layout_height="wrap_content"
             android:layout_width="@dimen/input_size"
             android:drawableLeft="@drawable/icone2"
@@ -58,8 +60,8 @@
             android:hint="Ecole"
             style="@style/EditText"
             android:layout_marginBottom="10dp"/>
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/registerPwdEd"
+        <AutoCompleteTextView
+            android:id="@+id/idclassroom"
             android:layout_height="wrap_content"
             android:layout_width="@dimen/input_size"
             android:drawableLeft="@drawable/icone2"
@@ -81,6 +83,7 @@
             android:textColor="@color/colorSecondary_text"/>
 
         <Button
+            android:id="@+id/btnRegisterChild"
             android:text="@string/registerBtn"
             style="@style/BtnBackgroungBig"
             android:layout_marginTop="25dp"
@@ -90,11 +93,11 @@
     </LinearLayout>
 
     <CheckBox
+        android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Recevoir les notifications"
         android:textColor="@color/colorSecondary_text"
-        android:id="@+id/checkBox"
         android:layout_below="@+id/loginBannerLayout"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
