--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="white">#FFFFFF</color>
     <color name="divider2">#e6e3e3</color>
     <color name="background">#d7d7d7</color>
+    <color name="googleRed">#ca2d14</color>
 </resources>
