--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,7 +51,8 @@
                 android:text="@string/connectBtn"
                 style="@style/BtnBackgroungBig"
                 android:layout_marginTop="20dp"
-                android:layout_marginBottom="12dp"/>
+                android:layout_marginBottom="12dp"
+                android:background="@drawable/selector_rounded_blue_green" />
          </LinearLayout>
 
          <LinearLayout
