--- a/app/src/main/res/layout/activity_report_mark.xml
+++ b/app/src/main/res/layout/activity_report_mark.xml
@@ -6,6 +6,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rcwReportMark"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/margin_normal" />
 
 </RelativeLayout>
