--- a/app/src/main/res/layout/report_simple_row.xml
+++ b/app/src/main/res/layout/report_simple_row.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:weightSum="1.0">
+        android:weightSum="1.0"
+        android:paddingTop="@dimen/padding_normal">
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
