--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="text_input_size">16sp</dimen>
     <dimen name="input_size">300dp</dimen>
     <dimen name="padding_normal">10dp</dimen>
+    <dimen name="padding_min">4dp</dimen>
     <dimen name="margin_normal">10dp</dimen>
     <dimen name="btnBig_width">230dp</dimen>
     <dimen name="btnBig_height">50dp</dimen>
