--- a/app/src/main/res/drawable/main_btn_backgroung.xml
+++ b/app/src/main/res/drawable/main_btn_backgroung.xml
@@ -8,7 +8,7 @@
         </shape>
     </item>
 
-    <item android:state_active="true">
+    <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <stroke android:color="@color/colorAccentAlpha" />
             <solid android:color="@color/colorAccentAlpha"/>
