info parent dialog done

--- a/app/src/main/res/layout/dialog_add_infos_parent.xml
+++ b/app/src/main/res/layout/dialog_add_infos_parent.xml
@@ -55,6 +55,7 @@
         style="@style/BtnBackgroungNormal"
         android:text="Valider"
         android:layout_gravity="end"
-        android:layout_marginRight="@dimen/margin_normal"/>
+        android:layout_marginRight="@dimen/margin_normal"
+        android:focusableInTouchMode="true"/>
 
     </LinearLayout>
