--- a/app/src/main/res/layout/activity_children.xml
+++ b/app/src/main/res/layout/activity_children.xml
@@ -35,11 +35,25 @@
         android:layout_height="match_parent"
         android:background="@color/background">
 
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rcwChildren"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/padding_normal"
+            android:layout_marginRight="-25dp">
+
+
+        </android.support.v7.widget.RecyclerView>
+
+
         <LinearLayout
             android:id="@+id/linearAddChild"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:background="@color/white"
+            android:layout_height="90dp"
+            android:layout_alignParentBottom="true"
+            android:background="@color/colorPrimary_light"
             android:orientation="horizontal"
             android:weightSum="1">
 
@@ -49,7 +63,8 @@
                 android:layout_gravity="center_vertical"
                 android:orientation="vertical"
                 android:layout_weight="0.9"
-                android:layout_marginLeft="@dimen/margin_normal">
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="70dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -58,42 +73,29 @@
                     android:textColor="@color/colorPrimary_text"
                     android:textSize="@dimen/text_normal_size"
                     android:layout_marginBottom="4dp"
-                    />
+                    android:layout_gravity="center_horizontal" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/add_child_execpt"
                     android:textSize="@dimen/text_small_size"
-                    android:textColor="@color/colorSecondary_text" />
+                    android:textColor="@color/colorSecondary_text"
+                    android:layout_gravity="center_horizontal"
+                    android:textAlignment="center" />
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="end|center_vertical"
-                android:layout_weight="0.1">
-                <Button
-                    android:id="@+id/btnChildrenAdd"
-                    style="@style/BtnBackgroungNormal"
-                    android:text="Ajouter"
-                    android:layout_marginRight="20dp"
-                    android:clickable="true" />
-            </LinearLayout>
+
 
         </LinearLayout>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rcwChildren"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/linearAddChild"
-            android:padding="@dimen/padding_normal"
-            android:layout_marginRight="-25dp">
-
-        </android.support.v7.widget.RecyclerView>
-
     </RelativeLayout>
 
-
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabChildrenAdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/ic_group_add_black_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
 
