--- a/app/src/main/res/layout/activity_children.xml
+++ b/app/src/main/res/layout/activity_children.xml
@@ -41,8 +41,7 @@
             android:id="@+id/rcwChildren"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/padding_normal"
-            android:layout_marginRight="-25dp">
+            android:paddingLeft="@dimen/padding_normal">
 
 
         </android.support.v7.widget.RecyclerView>
